trunk/Archive2/78/396cb2e2e7abf1/output
main.cpp:3:24: error: 'long long long' is too long for GCC
     operator long long long();
                        ^
main.cpp:3:24: error: 'long long long' is too long for GCC
