trunk/Archive2/78/396cb2e2e7abf1/main.cpp
class foo {
public:
    operator long long long();
};
